welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:-25: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-24: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-15: error: illegal start of statement (no modifiers allowed here)
	override def forward() {
        ^Runner:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^